<resources>
    <string name="app_name">Memorice</string>
    <string name="nuevo">Nuevo Juego</string>
    <string name="continuar">Continuar ></string>
    <string name="elija_tablero">Elija Tablero</string>
    <string name="cuatroxseis">4 x 6</string>
    <string name="cincoxseis">5 x 6</string>
    <string name="seisxseis">6 x 6</string>
    <string name="sietexseis">7 x 6</string>
    <string name="continuar_juego_titulo">Continuar Juego</string>
    <string name="saved_games">saved_games</string>
    <string name="files">files_save_games</string>
    <string name="saved_files">saved_files</string>
    <string name="nombre">Memorice</string>
    <string name="titulo_nuevo_juegp">NUEVO JUEGO</string>
    <string name="creditos">CREDITOS</string>

    <string name="title_activity_tablero">Tablero</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tiempo">3:00</string>
</resources>
